--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <!-- Navigation menu can be added here -->
     </header>
 
-    <section id="daily-deals">
-        <h2>Daily Deals</h2>
-        <!-- Dynamically update this section daily with new deals -->
-        <!-- Placeholder for a deal -->
-        <div class="deal">
-            <h3>Deal Title</h3>
-            <p>Description of the deal...</p>
-            <!-- More details about the deal can be added here -->
-        </div>
-        <!-- Repeat the above div for each deal -->
-    </section>
+    <<section id="daily-deals">
+    <h2>Daily Deals</h2>
+    <!-- Dynamically update this section daily with new deals -->
+    <!-- Placeholder for a deal -->
+    <div class="deal">
+        <img src="placeholder-image.jpg" alt="Deal Image"> <!-- Placeholder image -->
+        <h3><a href="link-to-deal.html">Deal Title</a></h3> <!-- Link to the deal -->
+        <p>Description of the deal...</p>
+    </div>
+    <!-- Additional deals will be added dynamically -->
+</section>
 
     <section id="newsletter">
         <h2>Subscribe to Our Weekly Newsletter</h2>
