--- a/index.html
+++ b/index.html
@@ -1,44 +1,64 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Farm and Off-Grid Deals</title>
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
     <header>
         <h1>Welcome to Farm and Off-Grid Deals</h1>
-        <!-- Navigation menu can be added here -->
+        <nav>
+            <!-- Navigation menu items go here -->
+        </nav>
     </header>
 
-    <<section id="daily-deals">
-    <h2>Daily Deals</h2>
-    <!-- Dynamically update this section daily with new deals -->
-    <!-- Placeholder for a deal -->
-    <div class="deal">
-        <img src="placeholder-image.jpg" alt="Deal Image"> <!-- Placeholder image -->
-        <h3><a href="link-to-deal.html">Deal Title</a></h3> <!-- Link to the deal -->
-        <p>Description of the deal...</p>
-    </div>
-    <!-- Additional deals will be added dynamically -->
-</section>
+    <main>
+        <section id="daily-deals">
+            <h2>Daily Deals</h2>
+            <article class="deal">
+                <img src="placeholder-image.jpg" alt="Deal Image">
+                <h3><a href="link-to-deal.html">Deal Title</a></h3>
+                <p>Description of the deal...</p>
+            </article>
+            <!-- Additional deals as articles -->
+        </section>
 
-    <section id="newsletter">
-        <h2>Subscribe to Our Weekly Newsletter</h2>
-        <form>
-            <input type="email" name="email" placeholder="Enter your email">
-            <button type="submit">Subscribe</button>
-        </form>
-        <!-- Form for newsletter subscription -->
-    </section>
+        <section id="newsletter">
+            <h2>Subscribe to Our Weekly Newsletter</h2>
+            <form>
+                <input type="email" name="email" placeholder="Enter your email">
+                <button type="submit">Subscribe</button>
+            </form>
+        </section>
+    </main>
 
     <footer>
+    <div class="footer-content">
+        <div class="footer-section">
+            <h4>About Us</h4>
+            <p>Learn more about Farm and Off-Grid Deals and our mission to bring you the best sustainable and organic deals.</p>
+        </div>
+
+        <div class="footer-section">
+            <h4>Contact Information</h4>
+            <p>Email: farmdeals1@gmail.com</p>
+            <p>Phone: 732-806-1869</p>
+        </div>
+
+        <div class="footer-section">
+            <h4>Follow Us</h4>
+            <p>
+                <a href="https://facebook.com">Facebook</a><br>
+                <a href="https://twitter.com">Twitter</a><br>
+                <a href="https://instagram.com">Instagram</a>
+            </p>
+        </div>
+    </div>
+
+    <div class="footer-bottom">
         <p>© 2023 Farm and Off-Grid Deals</p>
-        <!-- Footer content -->
-    </footer>
-
+    </div>
+</footer>
 </body>
-
 </html>
