--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
         </div>
     </div>
 
-    <div class="footer-bottom">
-        <p>© 2023 Farm and Off-Grid Deals</p>
-    </div>
+   <!-- Inside your footer -->
+<div class="footer-bottom">
+    <p id="date-time">Current Time: </p>
+    <p>© 2023 Farm and Off-Grid Deals</p>
+</div>
 </footer>
 </body>
 </html>
