--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="main-container">
     <header>
         <h1>Welcome to Farm and Off-Grid Deals</h1>
         <nav>
@@ -63,4 +64,5 @@
 </div>
 </footer>
 </body>
+</div>
 </html>
