--- a/index.html
+++ b/index.html
@@ -2,67 +2,86 @@
 <html>
 <head>
     <title>Farm and Off-Grid Deals</title>
-    <link rel="stylesheet" type="text/css" href="style.css">,
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Add additional stylesheets or head elements here -->
 </head>
 <body>
+
+    <!-- Main Content Container -->
     <div class="main-container">
-    <header>
-        <h1>Welcome to Farm and Off-Grid Deals</h1>
-        <nav>
-            <!-- Navigation menu items go here -->
-        </nav>
-    </header>
+        
+        <!-- Header Section -->
+        <header>
+            <h1>Welcome to Farm and Off-Grid Deals</h1>
+            <nav>
+                <!-- Navigation menu items go here -->
+                <!-- Add more navigation links or elements here -->
+            </nav>
+        </header>
 
-    <main>
-        <section id="daily-deals">
-            <h2>Daily Deals</h2>
-            <article class="deal">
-                <img src="placeholder-image.jpg" alt="Deal Image">
-                <h3><a href="link-to-deal.html">Deal Title</a></h3>
-                <p>Description of the deal...</p>
-            </article>
-            <!-- Additional deals as articles -->
-        </section>
+        <!-- Main Content Area -->
+        <main>
+            <!-- Daily Deals Section -->
+            <section id="daily-deals">
+                <h2>Daily Deals</h2>
+                <!-- Deal Article -->
+                <article class="deal">
+                    <img src="placeholder-image.jpg" alt="Deal Image">
+                    <h3><a href="link-to-deal.html">Deal Title</a></h3>
+                    <p>Description of the deal...</p>
+                </article>
+                <!-- Add more deal articles here -->
+            </section>
 
-        <section id="newsletter">
-            <h2>Subscribe to Our Weekly Newsletter</h2>
-            <form>
-                <input type="email" name="email" placeholder="Enter your email">
-                <button type="submit">Subscribe</button>
-            </form>
-        </section>
-    </main>
+            <!-- Newsletter Subscription Section -->
+            <section id="newsletter">
+                <h2>Subscribe to Our Weekly Newsletter</h2>
+                <form>
+                    <input type="email" name="email" placeholder="Enter your email">
+                    <button type="submit">Subscribe</button>
+                </form>
+                <!-- Additional form fields or elements can be added here -->
+            </section>
+        </main>
 
-    <footer>
-    <div class="footer-content">
-        <div class="footer-section">
-            <h4>About Us</h4>
-            <p>Learn more about Farm and Off-Grid Deals and our mission to bring you the best sustainable and organic deals.</p>
-        </div>
+        <!-- Footer Section -->
+        <footer>
+            <div class="footer-content">
+                <!-- About Us Section -->
+                <div class="footer-section">
+                    <h4>About Us</h4>
+                    <p>Learn more about Farm and Off-Grid Deals and our mission to bring you the best sustainable and organic deals.</p>
+                </div>
 
-        <div class="footer-section">
-            <h4>Contact Information</h4>
-            <p>Email: farmdeals1@gmail.com</p>
-            <p>Phone: 732-806-1869</p>
-        </div>
+                <!-- Contact Information Section -->
+                <div class="footer-section">
+                    <h4>Contact Information</h4>
+                    <p>Email: farmdeals1@gmail.com</p>
+                    <p>Phone: 732-806-1869</p>
+                </div>
 
-        <div class="footer-section">
-            <h4>Follow Us</h4>
-            <p>
-                <a href="https://facebook.com">Facebook</a><br>
-                <a href="https://twitter.com">Twitter</a><br>
-                <a href="https://instagram.com">Instagram</a>
-            </p>
-        </div>
+                <!-- Social Media Links Section -->
+                <div class="footer-section">
+                    <h4>Follow Us</h4>
+                    <p>
+                        <a href="https://facebook.com">Facebook</a><br>
+                        <a href="https://twitter.com">Twitter</a><br>
+                        <a href="https://instagram.com">Instagram</a>
+                    </p>
+                </div>
+            </div>
+
+            <!-- Footer Bottom Section -->
+            <div class="footer-bottom">
+                <p id="date-time">Current Time: </p>
+                <p>© 2023 Farm and Off-Grid Deals</p>
+            </div>
+        </footer>
     </div>
 
-   <!-- Inside your footer -->
-<div class="footer-bottom">
-    <p id="date-time">Current Time: </p>
-    <p>© 2023 Farm and Off-Grid Deals</p>
-</div>
-</footer>
-</div>
-<script src="script.js"></script>
+    <!-- JavaScript File -->
+    <script src="script.js"></script>
+    <!-- Add additional JavaScript files or scripts here -->
+
 </body>
 </html>
