--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <!-- Contact Information Section -->
                 <div class="footer-section">
                     <h4>Contact Information</h4>
-                    <p>Email: mailto:farmdeals1@gmail.com</p>
+                    <p>Email: <a href="mailto:farmdeals1@gmail.com">farmdeals1@gmail.com</a></p>
                     <p>Phone: 732-806-1869</p>
                 </div>
 
