--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <!-- Deal Article -->
                 <article class="deal">
                     <img src="placeholder-image.jpg" alt="Deal Image">
-                    <h3><a href="https://www.tractorsupply.com/tsc/product/troy-bilt-tb-42-in-bronco-riding-mower?utm_source=pepperjam&utm_medium=affiliate&cid=pepperjam-affiliate-169730&affiliate_id=169730&click_id=4569120818&clickId=4569120818">Deal Title</a></h3>
+                    <h3><a href="https://www.tractorsupply.com/tsc/product/troy-bilt-tb-42-in-bronco-riding-mower?utm_source=pepperjam&utm_medium=affiliate&cid=pepperjam-affiliate-169730&affiliate_id=169730&click_id=4569120818&clickId=4569120818">Troy Bilt 42" Bronco Riding Mower $1499!</a></h3>
                     <p>The mower is powered by a 19 HP Briggs & Stratton engine with pressure lubrication, which helps to prevent engine damage and extend the life of the mower. The mower also features an AutoDrive transmission with a foot-pedal design, which makes it easy to operate. The price drops from $2239.99 to 1499.99. Free in-store pickup.</p>
                 </article>
                 <!-- Add more deal articles here -->
