--- a/index.html
+++ b/index.html
@@ -38,10 +38,17 @@
             <!-- Newsletter Subscription Section -->
             <section id="newsletter">
                 <h2>Subscribe to Our Weekly Newsletter</h2>
-                <form>
-                    <input type="email" name="email" placeholder="Enter your email">
-                    <button type="submit">Subscribe</button>
-                </form>
+               <form name="contact" netlify>
+  <p>
+    <label>Name <input type="text" name="name" /></label>
+  </p>
+  <p>
+    <label>Email <input type="email" name="email" /></label>
+  </p>
+  <p>
+    <button type="submit">Send</button>
+  </p>
+</form>
                 <!-- Additional form fields or elements can be added here -->
             </section>
         </main>
