--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <div class="logo-container centered">
                 <a href="index.html">
-                    <img src="https://github.com/growgrounded/Farm-Deals/blob/main/WhatsApp%20Image%202023-11-23%20at%2018.19.38.jpeg" alt="Farm Deals Logo">
+                    <img src="WhatsApp Image 2023-11-23 at 18.19.38.jpeg" alt="Farm Deals Logo">
                 </a>
             </div>
             <!-- Rest of your header content -->
