--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <!-- Rest of your header content -->
         </header>
-        
+
 
         <!-- Main Content Area -->
         <main>
@@ -67,16 +67,14 @@
                 <div class="footer-section">
                     <h4>Contact Information</h4>
                     <p>Email: <a href="mailto:farmdeals1@gmail.com">farmdeals1@gmail.com</a></p>
-                    <p>Phone: 732-806-1869</p>
                 </div>
 
                 <!-- Social Media Links Section -->
                 <div class="footer-section">
                     <h4>Follow Us</h4>
                     <p>
-                        <a href="https://facebook.com">Facebook</a><br>
-                        <a href="https://twitter.com">Twitter</a><br>
-                        <a href="https://instagram.com">Instagram</a>
+                        <a href="https://www.youtube.com/channel/UCj8YrNJPRaW18P3oYJPyLbg">YouTube</a><br>
+                        <a href="https://www.instagram.com/growgrounded/?igshid=NTc4MTIwNjQ2YQ%3D%3D">Instagram</a>
                     </p>
                 </div>
             </div>
